k8s/hornet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hornet-set
  labels:
    source: one-click-tangle
spec:
  serviceName: hornet-rest
  replicas: 1
  selector:
    matchLabels:
      app: hornet
  template:
    metadata:
      labels:
        app: hornet
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: hornet
        image: gohornet/hornet:1.0.5
        securityContext:
          runAsUser: 65532
          runAsGroup: 65532
        workingDir: /app
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          requests:
            memory: "2Gi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: 14265
        livenessProbe:
          httpGet:
            path: /api/v1/info
            port: 14265
        ports:
        - name: gossip
          protocol: TCP
          containerPort: 15600
        - name: autopeering
          protocol: UDP
          containerPort: 14626
        - name: rest
          protocol: TCP
          containerPort: 14265
        - name: dashboard
          protocol: TCP
          containerPort: 8081
        volumeMounts:
        - name: configuration
          mountPath: /app/config.json
          subPath: config.json
        - name: hornet-ledger
          subPath: peering/peering.json
          mountPath: /app/peering.json
        - name: hornet-ledger
          subPath: mainnetdb
          mountPath: /app/mainnetdb
        - name: hornet-ledger
          subPath: p2pstore
          mountPath: /app/p2pstore
        - name: hornet-ledger
          subPath: snapshots
          mountPath: /app/snapshots/mainnet
      volumes:
      - name: configuration 
        configMap:
          name: hornet-config
  volumeClaimTemplates: 
    - metadata: 
        name: hornet-ledger
      spec: 
        accessModes: 
          - ReadWriteOnce
        resources: 
          requests: 
            storage: 20Gi
