k8s/hornet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hornet-tcp
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - name: gossip
    port: 15600
    protocol: TCP
    targetPort: gossip
  - name: rest
    port: 14265
    protocol: TCP
    targetPort: 14265
  - name: dashboard
    port: 8081
    protocol: TCP
    targetPort: dashboard
  selector:
    statefulset.kubernetes.io/pod-name: hornet-set-0
